kubernetes-manifests/uat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    networking.gke.io/v1beta1.FrontendConfig: "my-frontend-config" 
spec:
  tls:
  - hosts:
    - hello-uat.shawnk8s.com
    secretName: hello-uat-cert-tls
  rules:
  - host: hello-uat.shawnk8s.com
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service: 
              name: go-hello-demo-external
              port: 
                number: 80
